gulp-cmd 0.4.2 更新文档及增加example

--- a/test/index.html
+++ b/test/index.html
@@ -40,22 +40,22 @@
 
 <!-- 合并后 -->
 
-<script src="build/r.js"></script>
-<script>
-    seajs.use( 'r', function( r ){
-        console.log( r );
-    });
-</script>
+<!--<script src="build/r.js"></script>-->
+<!--<script>-->
+    <!--seajs.use( 'r', function( r ){-->
+        <!--console.log( r );-->
+    <!--});-->
+<!--</script>-->
 
 
 
 <!-- 测试c模块 -->
 <!-- 合并前 -->
-<!--<script>
-    seajs.use( 'src/c', function( c ){
+<script>
+    seajs.use( 'src/q', function( c ){
         console.log( c );
     });
-</script>-->
+</script>
 
 <!-- 合并后 -->
 <!--
